--- a/assets/CSS/header.css
+++ b/assets/CSS/header.css
@@ -1,41 +1,51 @@
-header {
-    background-color: #262626;
+.cabecalho {
+    border-bottom: 1px solid var(--main-color);
 }
 
-li {
+.icone__dev {
+    width: 25px;
+    height: 25px;
+    margin: 0 1rem 0 0;
+}
+
+.navegacao__item {
     list-style: none;
 }
 
-a {
-    color: white;
+.navegacao__link,
+.navegacao__titulo {
+    font-weight: 500;
+    color: var(--main-color);
     text-decoration: none;
 }
 
-.navegacao__barra{
-    min-height: 70px;
+.navegacao__barra,
+.navegacao__titulo {
+    min-height: 3.625rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 24px;
+    padding: 0 1.5rem 0 0.5rem;
 }
 
 .navegacao__menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 60px;
+    gap: 4rem;
 }
 
 .navegacao__titulo {
-    font-size: 2rem;
+    font-size: 1.2rem;
 }
 
 .navegacao__link {
-    transition: 0.7s ease;
+    font-size: 1.2rem;
+    transition: 0.3s ease;
 }
 
 .navegacao__link:hover {
-    color: dodgerblue;
+    color: var(--mouse-hover);
 }
 
 .menu__hamburgue {
@@ -43,14 +53,15 @@ a {
     cursor: pointer;
 }
 
-.bar {
+.barra {
     display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
+    width: 1.5625rem;
+    height: 0.1875rem;
+    margin: 0.3125rem auto;
     -webkit-transition: all 0, 3s ease-in-out;
     transition: all 0, 3s ease-in-out;
-    background-color: white;
+    background-color: var(--main-color);
+    border-radius: 0.3125rem;
 }
 
 @media(max-width:768px) {
@@ -58,35 +69,39 @@ a {
         display: block;
     }
 
-    .menu__hamburgue.active .bar:nth-child(2) {
+    .menu__hamburgue.active .barra:nth-child(2) {
         opacity: 0;
     }
 
-    .menu__hamburgue.active .bar:nth-child(1) {
+    .menu__hamburgue.active .barra:nth-child(1) {
         transform: translateY(8px) rotate(45deg);
     }
 
-    .menu__hamburgue.active .bar:nth-child(3) {
+    .menu__hamburgue.active .barra:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
     }
 
-    .navegacao__menu{
+    .navegacao__menu {
         position: fixed;
-        left: -100%;
-        top:70px;
-        gap:0;
+        right: -100%;
+        top: 3.75rem;
+        gap: 0;
         flex-direction: column;
-        background-color: #262626;
-        width: 100%;
+        background-color: var(--background);
+        border-bottom: 1px solid var(--main-color);
+        border-left: 1px solid var(--main-color);
+        width: 50%;
         text-align: center;
-        transition: 0.3s;
+        transition: 0.5s;
+        border-bottom-left-radius: 0.625rem;
+        padding: 1rem 0;
     }
 
-    .navegacao__item{
-        margin: 16px 0;
+    .navegacao__item {
+        margin: 0.75rem 0;
     }
 
-    .navegacao__menu.active{
-        left: 0;
+    .navegacao__menu.active {
+        right: 0;
     }
 }
