--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,17 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
 @import url("/assets/CSS/header.css");
 @import url("/assets/CSS/main.css");
+@import url("/assets/css/forms.css");
 
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 :root {
     --main-color: #711a7a;
     --font-color: #F6F6F6;
     --background: #13101d;
-    --background-hover: rgb( 184, 57, 176, 0.2);
+    --color-red: #e63636;
+    --background-hover: rgb(184, 57, 176, 0.2);
+    --background-hover2: rgb(184, 57, 176, 0.3);
     --mouse-hover: #b839b0;
     --main-font: 'Rubik', sans-serif;
 }
