--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,6 +1,6 @@
-@import url("/assets/css/header.css");
-@import url("/assets/css/main.css");
-@import url("/assets/css/forms.css");
+@import url("/assets/CSS/header.css");
+@import url("/assets/CSS/main.css");
+@import url("/assets/CSS/forms.css");
 
 * {
     margin: 0;
