--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -35,6 +35,7 @@
     color: var(--main-color);
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 1rem;
     border: 2px solid var(--main-color);
     width: 15rem;
