--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -18,9 +18,10 @@
 
 .meu__nome {
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 600;
     color: var(--main-color);
-    margin-bottom: 2rem;
+    margin: 0 0.5rem 2rem 0.5rem;
+    line-height: 32px;
 }
 
 .sessao2 {
@@ -36,23 +37,46 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
     border: 2px solid var(--main-color);
     width: 15rem;
     text-align: center;
     border-radius: 1rem;
     font-size: 1.375rem;
-    padding: 0.8rem 0;
+    padding: 0.7rem 0;
     text-decoration: none;
     font-weight: 600;
     transition: 0.3s ease;
+    line-height: 22px;
 }
 
 .icone__redes {
-    width: 1.6rem;
-    height: 1.6rem;
+    width: 1, 7rem;
+    height: 1.7rem;
 }
 
-.link__redes:hover{
-    background-color: var(--background-hover);
+
+@media(min-width:1024px) {
+    .minha__foto {
+        margin-bottom: 0.5rem;
+    }
+
+    .meu__nome {
+        margin: 0.9rem;
+        
+    }
+
+    .sessao2 {
+        flex-direction: row;
+        justify-content: center;
+        gap: 0.5rem;
+    }
+
+    .link__redes {
+        border: none;
+        padding: 0.5rem;
+        width: 9rem;
+        margin-right: 1rem;
+    }
+
 }
