--- a/assets/CSS/forms.css
+++ b/assets/CSS/forms.css
@@ -20,14 +20,14 @@
     align-items: center;
     align-items: baseline;
     background-color: var(--background-hover);
-    padding: 2rem 2rem 3rem 2rem;
+    padding: 1.5rem;
     margin: 1.5rem;
     border-radius: 10px;
     width: 80vw;
 }
 
 .labels {
-    margin-top: 0.5rem;
+    margin-top: 0.4rem;
 }
 
 .inputs {
@@ -55,7 +55,6 @@
     font-size: 0.75rem;
     margin: 3px 0 0 1px;
     color: var(--color-red);
-
 }
 
 .botao {
@@ -81,7 +80,6 @@
 
     .formulario{
         width: 50vw;
-        height: 75vh;
     }
     
 }
