--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,6 +1,8 @@
 @import url("/assets/CSS/header.css");
-@import url("/assets/CSS/main.css");
+@import url("/assets/CSS/information.css");
+@import url("/assets/CSS/about.css");
 @import url("/assets/CSS/forms.css");
+@import url("/assets/CSS/footer.css");
 
 * {
     margin: 0;
@@ -17,6 +19,10 @@
     --background-hover2: rgb(184, 57, 176, 0.3);
     --mouse-hover: #b839b0;
     --main-font: 'Rubik', sans-serif;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
