--- a/assets/CSS/header.css
+++ b/assets/CSS/header.css
@@ -8,8 +8,9 @@
 
 
 .icone__dev {
-    width: 25px;
-    height: 25px;
+    fill:var(--main-color);
+    width: 1.7rem;
+    height: 1.7rem;
     margin: 0 1rem 0 0;
 }
 
@@ -35,9 +36,8 @@
 
 .navegacao__menu {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    gap: 4rem;
+    gap: 1.5rem;
 }
 
 .navegacao__titulo {
@@ -96,11 +96,13 @@
         background-color: var(--background);
         width: 100%;
         height: 100vh;
-        text-align: center;
+        text-align: start;
         transition: 0.5s;
         padding: 1rem 0;
-        
+        justify-content: flex-start;
+        padding-top: 18rem;
     }
+
     .navegacao__menu.active {
         right: 0;
     }
@@ -108,9 +110,10 @@
     .navegacao__item {
         margin: 0.75rem 0;
     }
-    .navegacao__link{
+
+    .navegacao__link {
         font-size: 1.75rem;
         font-weight: 500;
     }
-    
+
 }
