--- a/assets/CSS/about.css
+++ b/assets/CSS/about.css
@@ -1,4 +1,15 @@
-
 #sessao2__sobre_mim {
-    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 4rem 0 0 0;
+    min-height: 60vh;
+}
+
+.sobre__mim_titulo {
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 32px;
+    color: var(--main-color);
+    margin: 1rem;
 }
