--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -2,19 +2,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3rem 0 0 0;
+    padding: 4rem 0 0 0;
     height: auto;
 }
 
 .content__titulo {
-    text-align: center;
     font-size: 2rem;
-    margin: 2rem 0 1rem 0;
-    color: var(--main-color);
-    font-weight: 600;
+    font-weight: 500;
     line-height: 32px;
+    color: var(--main-color);
+    margin: 1rem;
 }
-.content__subtitulo{
+
+.content__subtitulo {
     color: var(--main-color);
     line-height: 16px;
     font-weight: 400;
