--- a/assets/CSS/information.css
+++ b/assets/CSS/information.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3rem 0 0 0;
-    height: 70vh;
+    padding: 4rem 0 0;
+    height: auto;
 }
 
 .minha__foto {
-    margin: 3rem 0 2rem;
+    margin: 3rem 0 1rem;
 }
 
 .foto {
@@ -20,10 +20,10 @@
 
 .meu__nome {
     font-size: 2rem;
-    font-weight: 600;
-    color: var(--main-color);
-    margin: 0 0.5rem 2rem 0.5rem;
+    font-weight: 500;
     line-height: 32px;
+    color: var(--main-color);
+    margin: 1rem 0 2rem;
 }
 
 .redes__socias {
@@ -41,19 +41,18 @@
     align-items: center;
     gap: 0.5rem;
     border: 2px solid var(--main-color);
-    width: 15rem;
-    text-align: center;
+    width: 12rem;
     border-radius: 1rem;
     font-size: 1.375rem;
-    padding: 0.7rem 0;
+    line-height: 22px;
+    padding: 0.7rem;
     text-decoration: none;
     font-weight: 600;
     transition: 0.3s ease;
-    line-height: 22px;
 }
 
 .icone__redes {
-    fill:var(--main-color);
+    fill: var(--main-color);
     width: 1.7rem;
     height: 1.7rem;
 }
