--- a/assets/CSS/about.css
+++ b/assets/CSS/about.css
@@ -1,15 +1,39 @@
-#sessao2__sobre_mim {
+#section2__about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 6rem 0 4rem;
+    height: auto;
+}
+
+.about__me {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 4rem 0 0 0;
-    min-height: 60vh;
 }
 
-.sobre__mim_titulo {
+.about__me_title {
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 32px;
-    color: var(--main-color);
-    margin: 1rem;
+    color: var(--mouse-hover);
+    margin: 0 0 1rem;
+}
+
+.about__me_text {
+    text-align: justify;
+    word-spacing: normal;
+    padding: 0 1rem;
+    word-wrap: break-word;
+    word-break: normal;
+    text-indent: 2rem;
+    margin: 0.5rem;
+
+}
+
+@media(min-width:768px) {
+    .space__text{
+        display: none;
+    }
 }
