--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -1,88 +1,104 @@
-.content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 4rem 0 0 0;
-    height: auto;
-}
-
-.content__titulo {
-    font-size: 2rem;
-    font-weight: 500;
-    line-height: 32px;
-    color: var(--main-color);
-    margin: 1rem;
-}
-
-.content__subtitulo {
-    color: var(--main-color);
-    line-height: 16px;
-    font-weight: 400;
-}
-
-.formulario {
-    display: flex;
-    flex-direction: column;
-    font-size: 0.875rem;
-    background-color: var(--background-hover);
-    padding: 1.5rem;
-    margin: 1.5rem;
-    border-radius: 10px;
-    width: 80vw;
-}
-
-.labels {
-    margin-top: 0.5rem;
-    line-height: 16px;
-}
-
-.inputs {
-    padding: 0.5rem;
-    outline: none;
-    border-radius: 5px;
-    background-color: var(--background);
-    border: 2px solid var(--background-hover2);
-    color: var(--font-color);
-    width: 100%;
-    transition: 0.3s ease;
-    font-family: var(--main-font);
-    font-size: 0.875rem;
-    line-height: 14px;
-}
-
-.inputs:focus {
-    border-color: var(--main-color);
-}
-
-.textnone {
-    height: 25vh;
-    resize: none;
-}
-
-.span-required {
-    display: none;
-    font-size: 0.75rem;
-    margin: 0.4rem 0;
-    color: var(--color-red);
-    line-height: 12px;
-}
-
-.botao {
-    padding: 0.5rem;
-    font-size: 1rem;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    margin-top: 1.5rem;
-    color: var(--font-color);
-    background-color: var(--main-color);
-    font-weight: 600;
-    cursor: pointer;
-}
-
-@media(min-width: 769px) {
-    .formulario {
-        width: 50vw;
+    #section5__contact {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 6rem 0 4rem;
+        background-color: var(--background2);
     }
 
-}
+    .contact {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contact__titele {
+        font-size: 2rem;
+        font-weight: 400;
+        line-height: 32px;
+        color: var(--mouse-hover);
+    }
+
+    .contact__subtitele {
+        color: var(--main-color);
+        line-height: 16px;
+        font-size: 1rem;
+        font-weight: 400;
+    }
+
+    .form {
+        display: flex;
+        flex-direction: column;
+        font-size: 0.875rem;
+        background-color: var(--background3);
+        padding: 1.5rem;
+        margin: 1.5rem;
+        border-radius: 10px;
+        width: 80vw;
+
+    }
+
+    .labels {
+        margin-top: 0.5rem;
+        line-height: 16px;
+        color: var(--main-color);
+    }
+
+    .inputs {
+        padding: 0.5rem;
+        margin-top: 0.2rem;
+        outline: none;
+        border-radius: 5px;
+        background-color: var(--background);
+        border: 2px solid var(--main-color);
+        color: var(--main-color);
+        width: 100%;
+        transition: 0.3s ease;
+        font-family: var(--main-font);
+        font-size: 0.875rem;
+        line-height: 14px;
+    }
+
+    .inputs:focus {
+        border-color: var(--mouse-hover2);
+    }
+
+    .textnone {
+        height: 25vh;
+        resize: none;
+    }
+
+    .span-required {
+        display: none;
+        font-size: 0.75rem;
+        margin: 0.4rem 0 0.2rem;
+        color: var(--color-red);
+        line-height: 12px;
+    }
+
+    .button {
+        padding: 0.5rem;
+        font-size: 1rem;
+        outline: none;
+        border: none;
+        border-radius: 5px;
+        margin-top: 1.5rem;
+        color: var(--white);
+        background-color: var(--main-color);
+        font-weight: 600;
+        cursor: pointer;
+        transition: 0.3s ease;
+    }
+    .button:hover{
+        background-color: var(--mouse-hover);
+    }
+    .button:focus{
+        background-color: var(--mouse-hover);
+    }
+
+    @media(min-width: 769px) {
+        .form {
+            width: 50vw;
+        }
+
+    }
