ajuste nos icones e tamnhos de texto

--- a/assets/CSS/about.css
+++ b/assets/CSS/about.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 6rem 0 4rem;
+    padding: 6.5rem 0 3rem;
     height: auto;
 }
 
@@ -14,11 +14,12 @@
 }
 
 .about__me_title {
-    font-size: 2rem;
-    font-weight: 400;
-    line-height: 32px;
-    color: var(--mouse-hover);
-    margin: 0 0 1rem;
+    font-size: 1.3rem;
+    font-weight: 700;
+    line-height: 20.8px;
+    text-transform: uppercase;
+    color: var(--main-color);
+    margin-bottom: 0.5rem;
 }
 
 .about__me_text {
@@ -33,7 +34,7 @@
 }
 
 @media(min-width:768px) {
-    .space__text{
+    .space__text {
         display: none;
     }
 }
