--- a/assets/CSS/header.css
+++ b/assets/CSS/header.css
@@ -38,10 +38,7 @@
     transition: 0.3s ease;
 }
 
-.navigation__link:hover {
-    color: var(--mouse-hover);
-}
-
+.navigation__link:hover,
 .navigation__link:focus {
     color: var(--mouse-hover);
 }
