--- a/assets/CSS/information.css
+++ b/assets/CSS/information.css
@@ -20,7 +20,7 @@
     margin: 1rem 0 0.5rem;
 }
 
-.lacation {
+.location {
     font-size: 0.8rem;
     font-weight: 400;
     line-height: 12.8px;
@@ -33,8 +33,8 @@
     outline: none;
 }
 
-.lacation:hover,
-.lacation:focus {
+.location:hover,
+.location:focus {
     color: var(--mouse-hover);
 }
 
