ajustes na cor do títulos

--- a/assets/CSS/about.css
+++ b/assets/CSS/about.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 6.5rem 0 3rem;
+    padding: 4rem 0 3rem;
     height: auto;
 }
 
@@ -22,8 +22,9 @@
     font-weight: 700;
     line-height: 20.8px;
     text-transform: uppercase;
-    color: var(--main-color);
+    color: var(--mouse-hover);
     margin-bottom: 0.5rem;
+    margin-top: 2rem;
     text-align: center;
     padding-top: 1rem;
 }
@@ -42,6 +43,7 @@
 .about__me_text,
 .experience__text,
 .education__text {
+    font-size: 1rem;
     text-align: left;
     word-spacing: normal;
     padding: 0 1rem;
@@ -80,10 +82,14 @@
 }
 
 .softSkills__text {
+    font-size: 1rem;
     list-style: none;
     text-align: center;
     padding: 0 1rem;
     margin: 0.5rem;
+    word-spacing: normal;
+    word-wrap: break-word;
+    word-break: normal;
 }
 
 .softSkills__items {
