--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -3,23 +3,22 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        align-items: center;
         padding: 5.5rem 0 3rem;
         height: auto;
         background-color: var(--background2);
     }
 
-    .contact__titele {
+    .contact__title {
         text-align: center;
         font-size: 1.3rem;
         font-weight: 700;
         line-height: 20.8px;
         text-transform: uppercase;
-        color: var(--main-color);
+        color: var(--mouse-hover);
         margin-bottom: 0.5rem;
     }
 
-    .contact__subtitele {
+    .contact__subtitle {
         color: var(--main-color);
         line-height: 16px;
         font-size: 1rem;
@@ -71,10 +70,6 @@
         border-color: var(--mouse-hover2);
     }
 
-    .textnone {
-        height: 25vh;
-        resize: none;
-    }
 
     .span-required {
         display: none;
