--- a/assets/CSS/header.css
+++ b/assets/CSS/header.css
@@ -108,13 +108,13 @@
         top: 0;
         gap: 0;
         flex-direction: column;
+        justify-content: center;
         background-color: var(--background);
         width: 100%;
         height: 100vh;
         text-align: start;
         transition: 0.5s;
         padding: 1rem 0;
-        padding-top: 18rem;
     }
 
     .navigation__menu.active {
