--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -3,7 +3,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding: 5.5rem 0 3rem;
+        padding: 6.5rem 0 3rem;
         height: auto;
         background-color: var(--background2);
     }
@@ -26,6 +26,11 @@
         display: flex;
         align-items: center;
         gap: 0.3rem;
+    }
+
+    .text__area{
+        height: 25vh;
+        resize: none;
     }
 
     .message__icon {
@@ -154,7 +159,7 @@
             width: 50vw;
         }
 
-        .textnone {
+        .text__area {
             height: 20vh;
             resize: none;
         }
