ajustando responsivo e adicionei tecnologias na seção informação

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,9 +1,9 @@
 @import url("/assets/CSS/header.css");
 @import url("/assets/CSS/information.css");
 @import url("/assets/CSS/about.css");
+@import url("/assets/CSS/projects.css");
 @import url("/assets/CSS/contact.css");
 @import url("/assets/CSS/footer.css");
-
 * {
     margin: 0;
     padding: 0;
