--- a/assets/CSS/about.css
+++ b/assets/CSS/about.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 4rem 0 3rem;
+    padding: 6rem 0 ;
     height: auto;
 }
 
@@ -45,11 +45,8 @@
 .education__text {
     font-size: 1rem;
     text-align: left;
-    word-spacing: normal;
+    text-indent: 1.5rem;
     padding: 0 1rem;
-    word-wrap: break-word;
-    word-break: normal;
-    text-indent: 2rem;
     margin: 0.5rem;
 }
 
@@ -88,15 +85,13 @@
     padding: 0 1rem;
     margin: 0.5rem;
     word-spacing: normal;
-    word-wrap: break-word;
-    word-break: normal;
 }
 
 .softSkills__items {
     margin-bottom: 0.3rem;
 }
 
-@media(min-width:1024px) {
+@media(min-width:768px) {
     #section2__about {
         display: grid;
         grid-template-columns: 1fr 1fr;
