--- a/assets/CSS/footer.css
+++ b/assets/CSS/footer.css
@@ -2,8 +2,7 @@
     text-align: center;
     background: var(--main-color);
     width: 100%;
-    margin-top: 0 0 2rem;
-    padding: 1.5rem;
+    padding: 1.5rem 1.5rem 1rem;
 }
 
 .footer__title {
