--- a/assets/CSS/information.css
+++ b/assets/CSS/information.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 6rem 0 4rem;
+    padding: 7rem 0 3rem;
     height: auto;
     background-color: var(--background2);
 }
@@ -48,6 +48,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 1rem 0;
     gap: 1rem;
     transition: 0.3s ease;
 }
@@ -81,6 +82,38 @@
     height: 1.375rem;
 }
 
+.programming__tech {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0 2rem;
+}
+
+.programming__tech_title {
+    padding: 0 0 1rem 0;
+    margin: 0 0 1rem 0;
+    font-size: 1rem;
+    line-height: 16px;
+    font-weight: 500;
+    border-bottom: 1.5px solid var(--main-color);
+}
+
+.programming__languages {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+}
+
+.languages__icons {
+    width: 2.5rem;
+    margin: 0 0.5rem;
+    transition: 0.2s;
+}
+
+.languages__icons:hover {
+    transform: scale(1.2);
+}
 
 @media(min-width:768px) {
 
@@ -100,4 +133,21 @@
         /* width: 10%; */
     }
 
+    .programming__tech {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin: 1rem 0 2rem;
+    }
+
+    .programming__tech_title {
+        padding: 0 1rem 0 0;
+        margin: 0 1.5rem 0 0;
+        font-size: 1rem;
+        line-height: 16px;
+        font-weight: 500;
+        border-right: 1.5px solid var(--main-color);
+        border-bottom: none;
+    }
 }
