--- a/assets/CSS/about.css
+++ b/assets/CSS/about.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 6rem 0 ;
+    padding: 5.5rem 0 6rem;
     height: auto;
 }
 
