--- a/assets/CSS/information.css
+++ b/assets/CSS/information.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 7rem 0 6rem;
+    padding: 6rem 0 5rem;
     height: auto;
     background-color: var(--background2);
 }
@@ -27,7 +27,7 @@
     text-decoration: none;
     color: var(--main-color);
     transition: 0.3s ease;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     display: flex;
     align-items: center;
     outline: none;
@@ -87,7 +87,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 1rem 0 2rem;
+    margin: 1rem 0 0.5rem;
 }
 
 .programming__tech_title {
@@ -100,14 +100,14 @@
 }
 
 .programming__languages {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     list-style: none;
 }
 
 .languages__icons {
     width: 2.5rem;
-    margin: 0 0.5rem;
+    margin: 0.5rem;
     transition: 0.2s;
 }
 
@@ -138,7 +138,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        margin: 1rem 0 2rem;
+        margin: 1rem 0 0.5rem;
     }
 
     .programming__tech_title {
