fiz a página de certificados (ainda falta fazer a descrição de 5)

--- a/assets/CSS/information.css
+++ b/assets/CSS/information.css
@@ -115,7 +115,7 @@
     transform: scale(1.2);
 }
 
-@media(min-width:768px) {
+@media screen and (min-width:768px) {
 
     .my__picture {
         margin-bottom: 0.5rem;
