--- a/assets/CSS/about.css
+++ b/assets/CSS/about.css
@@ -91,7 +91,7 @@
     margin-bottom: 0.3rem;
 }
 
-@media(min-width:768px) {
+@media screen and (min-width:768px) {
     #section2__about {
         display: grid;
         grid-template-columns: 1fr 1fr;
