--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -154,7 +154,7 @@
         outline: invert;
     }
 
-    @media(min-width: 769px) {
+    @media screen and (min-width: 769px) {
         .form {
             width: 50vw;
         }
