--- a/assets/CSS/certificate.css
+++ b/assets/CSS/certificate.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem 0;
+    justify-content: center;
+    padding: 4.5rem 0;
     height: auto;
     background-color: var(--background2);
 }
@@ -17,9 +18,35 @@
     line-height: 27.2px;
     text-transform: uppercase;
     color: var(--mouse-hover);
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
     text-align: center;
     padding-top: 1rem;
+}
+
+.certificates__subtitle {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.subtitle__link {
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 16px;
+    text-decoration: none;
+    color: var(--main-color);
+    transition: 0.3s ease;
+    display: flex;
+    align-items: center;
+    outline: none;
+    list-style: none;
+    text-align: left;
+    padding: 0 1rem;
+    margin: 0.5rem;
+    gap: 0.5rem;
+}
+
+.subtitle__link:hover {
+    color: var(--mouse-hover);
 }
 
 .certificates__box {
@@ -50,6 +77,7 @@
     text-align: center;
     margin-bottom: 1rem;
 }
+
 #lessText1,
 #moreText1,
 #lessText2,
@@ -76,7 +104,7 @@
 #myBtn4,
 #myBtn5,
 #myBtn6,
-#myBtn,
+#myBtn7,
 #myBtn8 {
     background-color: var(--background2);
     border: none;
@@ -92,21 +120,21 @@
     margin-top: 1rem;
 }
 
+
 @media screen and (min-width:768px) {
     .certificates {
         display: grid;
         align-items: start;
-        grid-template-columns: 1fr 1fr;
     }
 
     .certificates__box {
-        width: 22.5rem;
+        width: 34rem;
         margin: 0.5rem;
     }
 
     .certificates__pdf {
-        width: 21.5rem;
-        height: 15.5rem;
+        width: 32.5rem;
+        height: 24rem;
 
     }
 }
