--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -5,6 +5,8 @@
 /* @import url("/assets/CSS/projects.css"); */
 @import url("/assets/CSS/contact.css");
 @import url("/assets/CSS/footer.css");
+@import url("/assets/CSS/myBtnScroll.css");
+
 * {
     margin: 0;
     padding: 0;
