estilizando botão voltar para cima e pagina certificado

--- a/assets/CSS/about.css
+++ b/assets/CSS/about.css
@@ -50,7 +50,7 @@
     margin: 0.5rem;
 }
 
-.about__me_certificates {
+.about__me_certificate {
     font-size: 1rem;
     font-weight: 500;
     line-height: 16px;
@@ -67,12 +67,12 @@
     gap: 0.5rem;
 }
 
-.about__me_certificates:hover,
-.about__me_certificates:focus {
+.about__me_certificate:hover,
+.about__me_certificate:focus {
     color: var(--mouse-hover);
 }
 
-.certificates__icon {
+.certificate__icon {
     width: 1rem;
     height: 1rem;
     fill: var(--main-color);
