--- a/assets/CSS/certificate.css
+++ b/assets/CSS/certificate.css
@@ -1,74 +1,52 @@
-#section5__certificates {
+#section5__certificate {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 4.5rem 0;
+    padding: 6rem 0;
     height: auto;
     background-color: var(--background2);
 }
-
 .header__certificate {
     margin: 2rem 0;
 }
 
-.certificates__title {
-    font-size: 1.3rem;
-    font-weight: 500;
+.certificate__title {
+    color: var(--main-color);
+    outline: none;
+    font-size: 1.5rem;
+    font-weight: 700;
     line-height: 20.8px;
     text-transform: uppercase;
-    color: var(--main-color);
-    margin-bottom: 1rem;
     text-align: center;
     padding-top: 1rem;
 }
-
-.certificates__subtitle {
+.certificate__box {
     display: flex;
-    justify-content: flex-end;
-}
-
-.subtitle__link {
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: 16px;
-    text-decoration: none;
-    color: var(--main-color);
-    transition: 0.3s ease;
-    display: flex;
-    align-items: center;
-    outline: none;
-    list-style: none;
-    text-align: left;
-    padding: 0 1rem;
-    margin: 0.5rem;
-    gap: 0.5rem;
-}
-
-.subtitle__link:hover {
-    color: var(--mouse-hover);
-}
-
-.certificates__box {
-    width: 21rem;
-    border: 1px solid var(--main-color);
+    flex-direction: column;
+    width: 19.5rem;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     background-color: var(--background);
     border-radius: 10px;
     padding: 0.625rem;
-    margin: 0.5rem 0.5rem 1.5rem;
     align-items: flex-start;
+    margin: 1rem;
 }
 
-.certificates__pdf {
-    width: 19.5rem;
-    height: 14.5rem;
+.certificate__pdf,
+iframe {
+    border-radius: 10px;
+    width: 100%;
+    height: 13.5rem;
 }
 
 .description {
+    width: 100%;
     background-color: var(--background2);
     border-radius: 10px;
     margin-top: 0.5rem;
     padding: 0.5rem;
+
 }
 
 .description h2 {
@@ -76,6 +54,10 @@
     font-weight: 500;
     text-align: center;
     margin-bottom: 1rem;
+}
+
+.description p {
+    font-size: 1rem;
 }
 
 #lessText1,
@@ -106,7 +88,7 @@
 #myBtn6,
 #myBtn7,
 #myBtn8 {
-    background-color: var(--background2);
+    background-color: transparent;
     border: none;
     color: var(--mouse-hover);
     text-decoration: none;
@@ -122,43 +104,30 @@
 
 
 @media screen and (min-width:768px) {
-    .certificates {
-        display: grid;
-        align-items: start;
+    .certificate__box {
+        width: 34.5rem;
     }
 
-    .certificates__box {
-        width: 34rem;
-        margin: 0.5rem;
-    }
-
-    .certificates__pdf {
-        width: 32.5rem;
+    .certificate__pdf,
+    iframe {
         height: 24rem;
 
     }
 }
 
 @media screen and (min-width:1024px) {
-    .certificates {
+    .certificate {
+        display: grid;
+        align-items: start;
         grid-template-columns: 1fr 1fr;
     }
 
-    .certificates__box {
-        width: 28.5rem;
-        margin: 0.5rem;
-
+    .certificate__box {
+        width: 29.5rem;
     }
 
-    .certificates__pdf {
-        width: 26.5rem;
-        height: 19.4rem;
+    .certificate__pdf,
+    iframe {
+        height: 20.4rem;
     }
-}
-
-@media screen and (min-width:1440px) {
-    .certificates {
-        grid-template-columns: repeat(3, 1fr);
-    }
-
 }
