--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3,13 +3,15 @@
 @import url("/assets/CSS/about.css");
 @import url("/assets/CSS/certificate.css");
 /* @import url("/assets/CSS/projects.css"); */
+@import url("/assets/CSS/blog.css");
 @import url("/assets/CSS/contact.css");
 @import url("/assets/CSS/footer.css");
-@import url("/assets/CSS/myBtnScroll.css");
+@import url("/assets/CSS/button-scroll-top.css");
 
 * {
     margin: 0;
     padding: 0;
+    border: 0;
     box-sizing: border-box;
 }
 
