--- a/assets/CSS/about.css
+++ b/assets/CSS/about.css
@@ -32,7 +32,7 @@
 .experience__subtitle,
 .education__subtitle {
     color: var(--main-color);
-    font-size: 1rem;
+    font-size: 1.125rem;
     line-height: 16px;
     font-weight: 500;
     text-transform: uppercase;
@@ -84,7 +84,6 @@
     text-align: center;
     padding: 0 1rem;
     margin: 0.5rem;
-    word-spacing: normal;
 }
 
 .softSkills__items {
@@ -95,6 +94,7 @@
     #section2__about {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        padding: 4rem 0 6rem;
         align-items: stretch;
     }
 }
