--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -1,167 +1,164 @@
-    #section7__contact {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 7rem 0 2rem;
-        height: auto;
-        background-color: var(--background2);
-    }
+#section6__contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 6.5rem 0 1rem;
+    height: auto;
+    background-color: var(--background2);
+}
 
-    .contact__title {
-        text-align: center;
-        font-size: 1.3rem;
-        font-weight: 700;
-        line-height: 20.8px;
-        text-transform: uppercase;
-        color: var(--mouse-hover);
-        margin-bottom: 0.5rem;
-    }
+.contact__title {
+    text-align: center;
+    font-size: 1.3rem;
+    font-weight: 700;
+    line-height: 20.8px;
+    text-transform: uppercase;
+    color: var(--mouse-hover);
+    margin-bottom: 0.8rem;
+}
 
-    .contact__subtitle {
-        color: var(--main-color);
-        line-height: 16px;
-        font-size: 1rem;
-        font-weight: 400;
-        display: flex;
-        align-items: center;
-        gap: 0.3rem;
+.contact__subtitle {
+    color: var(--main-color);
+    line-height: 16px;
+    font-size: 1rem;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
+}
+
+.message__icon {
+    width: 1rem;
+    height: 1rem;
+    fill: var(--main-color);
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    font-size: 0.875rem;
+    background-color: var(--background3);
+    padding: 1.5rem;
+    margin: 3rem 1.5rem;
+    border-radius: 10px;
+    width: 80vw;
+}
+
+.labels {
+    margin-top: 0.5rem;
+    line-height: 16px;
+    color: var(--main-color);
+}
+
+.inputs {
+    padding: 0.5rem;
+    margin-top: 0.2rem;
+    outline: none;
+    border-radius: 5px;
+    background-color: var(--background);
+    border: 2px solid var(--main-color);
+    color: var(--main-color);
+    width: 100%;
+    transition: 0.3s ease;
+    font-family: var(--main-font);
+    font-size: 0.875rem;
+    line-height: 14px;
+}
+
+.inputs:focus {
+    border-color: var(--mouse-hover2);
+}
+
+.text__area {
+    height: 13rem;
+    resize: none;
+}
+
+.span-required {
+    display: none;
+    font-size: 0.75rem;
+    margin: 0.4rem 0 0.2rem;
+    color: var(--color-red);
+    line-height: 12px;
+}
+
+.button {
+    padding: 0.5rem;
+    font-size: 1rem;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    margin: 1rem 15% 0;
+    color: var(--white);
+    background-color: var(--main-color);
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.3s ease;
+    width: 70%;
+}
+
+.button:hover,
+.button:focus {
+    background-color: var(--mouse-hover);
+}
+
+.button:disabled {
+    cursor: not-allowed;
+    background: var(--background3);
+}
+
+.dialog_box {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--background4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+}
+
+.dialog-content {
+    background-color: var(--background);
+    padding: 1.25rem;
+    border-radius: 0.625rem;
+    width: 80%;
+    max-width: 500px;
+    text-align: center;
+}
+
+.dialog__message_title {
+    font-size: 1.3rem;
+    color: var(--main-color);
+    text-transform: uppercase;
+    font-weight: 500;
+    line-height: 20.8px;
+    margin-bottom: 1.25rem;
+}
+
+.dialog__button {
+    padding: 0.8rem 2rem;
+    background-color: var(--mouse-hover);
+    color: var(--white);
+    font-size: 1.3rem;
+    font-weight: 500;
+    line-height: 20.8px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    outline: invert;
+}
+
+@media screen and (min-width: 769px) {
+    .form {
+        width: 50vw;
     }
 
     .text__area {
-        height: 20rem;
+        height: auto;
         resize: none;
     }
-
-    .message__icon {
-        width: 1rem;
-        height: 1rem;
-        fill: var(--main-color);
-    }
-
-    .form {
-        display: flex;
-        flex-direction: column;
-        font-size: 0.875rem;
-        background-color: var(--background3);
-        padding: 1.5rem;
-        margin: 1.5rem;
-        border-radius: 10px;
-        width: 80vw;
-    }
-
-    .labels {
-        margin-top: 0.5rem;
-        line-height: 16px;
-        color: var(--main-color);
-    }
-
-    .inputs {
-        padding: 0.5rem;
-        margin-top: 0.2rem;
-        outline: none;
-        border-radius: 5px;
-        background-color: var(--background);
-        border: 2px solid var(--main-color);
-        color: var(--main-color);
-        width: 100%;
-        transition: 0.3s ease;
-        font-family: var(--main-font);
-        font-size: 0.875rem;
-        line-height: 14px;
-    }
-
-    .inputs:focus {
-        border-color: var(--mouse-hover2);
-    }
-
-
-    .span-required {
-        display: none;
-        font-size: 0.75rem;
-        margin: 0.4rem 0 0.2rem;
-        color: var(--color-red);
-        line-height: 12px;
-    }
-
-    .button {
-        padding: 0.5rem;
-        font-size: 1rem;
-        outline: none;
-        border: none;
-        border-radius: 5px;
-        margin: 1rem 15% 0;
-        color: var(--white);
-        background-color: var(--main-color);
-        font-weight: 600;
-        cursor: pointer;
-        transition: 0.3s ease;
-        width: 70%;
-    }
-
-    .button:hover,
-    .button:focus {
-        background-color: var(--mouse-hover);
-    }
-
-    .button:disabled {
-        cursor: not-allowed;
-        background: var(--background3);
-    }
-
-    .dialog_box {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: var(--background4);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        visibility: hidden;
-    }
-
-    .dialog-content {
-        background-color: var(--background);
-        padding: 1.25rem;
-        border-radius: 0.625rem;
-        width: 80%;
-        max-width: 500px;
-        text-align: center;
-    }
-
-    .dialog__message_title {
-        font-size: 1.3rem;
-        color: var(--main-color);
-        text-transform: uppercase;
-        font-weight: 500;
-        line-height: 20.8px;
-        margin-bottom: 1.25rem;
-    }
-
-
-    .dialog__button {
-        padding: 0.8rem 2rem;
-        background-color: var(--mouse-hover);
-        color: var(--white);
-        font-size: 1.3rem;
-        font-weight: 500;
-        line-height: 20.8px;
-        border: none;
-        border-radius: 10px;
-        cursor: pointer;
-        outline: invert;
-    }
-
-    @media screen and (min-width: 769px) {
-        .form {
-            width: 50vw;
-        }
-
-        .text__area {
-            height: auto;
-            resize: none;
-        }
-
-    }
+}
