--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -2,7 +2,7 @@
 @import url("/assets/CSS/information.css");
 @import url("/assets/CSS/about.css");
 @import url("/assets/CSS/certificate.css");
-/* @import url("/assets/CSS/projects.css"); */
+@import url("/assets/CSS/projects.css");
 @import url("/assets/CSS/blog.css");
 @import url("/assets/CSS/contact.css");
 @import url("/assets/CSS/footer.css");
